@@ -156,6 +156,7 @@ CREATE TABLE `tincident_type` (
   `description` text NULL default NULL,
   `id_wizard` mediumint(8) unsigned NULL,
   `id_group` int(10) NOT NULL default '0',
+  `show_in_list` tinyint(3) unsigned NOT NULL DEFAULT 0,
   PRIMARY KEY  (`id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
@@ -479,6 +480,7 @@ CREATE TABLE `tinvoice` (
   `invoice_create_date` date NOT NULL DEFAULT '0000-00-00',
   `invoice_payment_date` date DEFAULT NULL,
   `status` enum ('pending', 'paid', 'canceled') default 'pending',
+  `reference` text NOT NULL default '',
   PRIMARY KEY  (`id`),
   KEY `tcost_idx_1` (`id_user`),
   KEY `tcost_idx_2` (`id_company`)
@@ -601,6 +603,7 @@ CREATE TABLE `tcontract` (
   `id_sla` mediumint(8) unsigned NULL default NULL,
   `id_group` mediumint(8) unsigned NULL default NULL,
   `private` tinyint(2) unsigned NOT NULL DEFAULT 0,
+  `status` tinyint(3) NOT NULL DEFAULT 1,
   PRIMARY KEY  (`id`),
   FOREIGN KEY (`id_company`) REFERENCES tcompany(`id`)
       ON DELETE CASCADE
